# gzbbinarydoc

./: Cargo.toml  README.md
src/: _main.rs  doc.rs  lib.rs  reader.rs  writer.rs
